# wxKinectHelper

./: LICENSE  README.md
3dparty/libjson/: UpgradeLog.XML
KinectServer/: CMakeLists.txt  HttpHeader.cpp  HttpHeader.h  KinectDataProcessorBase.h  KinectHandlerThread.cpp  KinectHandlerThread.h  KinectServer.cpp  KinectServer.h  PclDataProcessor.cpp  PclDataProcessor.h  ServerMain.cpp  SimpleDataProcessor.cpp  SimpleDataProcessor.h  ext_thread.cpp  ext_thread.h
KinectTest/: CMakeLists.txt  KinectCanvas.cpp  KinectCanvas.h  KinectDataSender.cpp  KinectDataSender.h  KinectTest.pjd  KinectTest.pjd.bak  KinectTestApp.cpp  KinectTestApp.h  KinectTestMainFrame.cpp  KinectTestMainFrame.h
KinectTypes/: CMakeLists.txt  KinectTypes.cpp  KinectTypes.h
ObjDetector/: BackgroundDefinition.cpp  BackgroundDefinition.h  CMakeLists.txt  ObjectDefinition.cpp  ObjectDefinition.h  ObjectDetector.cpp  ObjectDetector.h  find_obj.cpp
Segmentation/: CMakeLists.txt  PclObjectDetector.cpp  PclObjectDetector.h  PclSegmentation.cpp  PclSegmentation.h
ServerTest/: CMakeLists.txt  ServerTest.cpp
include/: stdwx.h
libevent/: CMakeLists.txt
wxKinectHelper/: CMakeLists.txt  KinectGrabberBase.cpp  KinectGrabberBase.h  KinectGrabberFreenect.cpp  KinectGrabberFreenect.h  KinectGrabberMSW.cpp  KinectGrabberMSW.h  KinectHelper.cpp  KinectHelper.h  KinectHelperImpl.cpp  KinectHelperImpl.h  KinectHelperImplFreenect.cpp  KinectHelperImplFreenect.h  KinectHelperImplMSW.cpp  KinectHelperImplMSW.h  SkeletonPainter.cpp  SkeletonPainter.h  SkeletonPainterImpl.h  SkeletonPainterImplMSW.cpp  SkeletonPainterImplMSW.h
